--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
